# Chinstrap3D

./: .gitignore  .ignore  CMakeLists.txt  Dependencies.cmake  LICENSE  README.md  config.chin
app/: CMakeLists.txt  pch.h  resources.chin
app/res/materials/: Simple.material
app/res/shaders/: Basic.frag  Basic.vert  compile.sh
app/src/: Main.cpp  TestGLScene.cpp  TestGLScene.h  TestGuiScene.cpp  TestGuiScene.h  TestMenuScene.cpp  TestMenuScene.h
batch/: build-debug.bat  generate.bat  regenerate.bat  run-debug.bat  run-release.bat
chinstrap/: CMakeLists.txt  pch.h
chinstrap/res/shaders/: Basic.vert  BasicFragment.glsl  BasicFragment.shader  BasicVertex.glsl  BasicVertex.shader  BasicVertex.spv  compile.bat
chinstrap/src/: Application.cpp  Application.h  DevInterface.cpp  DevInterface.h  Event.h  Renderer.cpp  Renderer.h  RendererData.h  Scene.cpp  Scene.h  UserSettings.h  Window.cpp  Window.h
chinstrap/src/events/: Event.h
chinstrap/src/memory/: Array.h  CompHashMap.h  DevString.cpp  DevString.h  FilePathMap.cpp  FilePathMap.h  MemoryPool.h  StackAllocator.cpp  StackAllocator.h  StackArray.h  StringMap.cpp  StringMap.h
chinstrap/src/ops/: DevInterface.cpp  DevInterface.h  Logging.h  Profiling.h
chinstrap/src/rendering/: Renderer.cpp  Renderer.h  RendererData.cpp  RendererData.h  VulkanData.cpp  VulkanData.h  VulkanFunctions.cpp  VulkanFunctions.h
chinstrap/src/resourcer/: MaterialManager.cpp  MaterialManager.h  ResourceManager.cpp  ResourceManager.h  ResourceRef.cpp  ResourceRef.h
chinstrap/src/serialization/: SerializeBinary.cpp  SerializeReadable.cpp  SerializeReadable.h
core/: CMakeLists.txt  Chinstrap.h
core/src/: Application.cpp  Application.h  Event.h  InputEvents.h  Layer.h  Logging.h  Renderer.cpp  Renderer.h  RendererData.cpp  Scene.h  Window.cpp  Window.h  WindowEvents.h
shell/: build-debug.sh  build-release.sh  generate.sh  regenerate.sh  remove-generated.sh  run-debug.sh  run-gamescope.sh  run-release.sh  run-xorg.sh
tests/: CMakeLists.txt
tests/src/: Main.cpp  MemoryTest.cpp  MemoryTest.h
